--- a/src/styles/config.less
+++ b/src/styles/config.less
@@ -48,9 +48,9 @@
 @titlebar-btn-fontsize: 20px;
 
 @searchbar-btn-size: @titlebar-size;
-@searchbar-padding: .333em;
+@searchbar-padding: .333rem;
 @searchbar-dropdown-max-items: 5;
-@searchbar-dropdown-font-size: .95em;
+@searchbar-dropdown-font-size: .95rem;
 @searchbar-dropdown-line-height: 1.3;
 
 @checkbox-size: @font-size-base;
